regression/fail/signature-and.sml
signature SIG = sig end
and SIG' = SIG
